# verden

./: .sentryclirc  Cargo.toml  Dockerfile  README.md
migrations/: 20220822142548_add-users-table.sql  20220903093057_add-users-table.sql  20220906164354_add-models-table.sql  20220912114912_add-models-uploads-table.sql  20220920135729_add-warnings-table.sql  20221003064044_add-likes.sql
src/: config.rs  db.rs  errors.rs  files.rs  json.rs  logger.rs  main.rs  pagination.rs
src/auth/: models.rs  routes.rs
src/likes/: models.rs
src/model/: models.rs  routes.rs
src/models/: auth.rs  mod.rs  model.rs  user.rs  warning.rs
src/routes/: auth.rs  mod.rs  model.rs  user.rs  warning.rs
src/user/: models.rs  routes.rs
src/warning/: models.rs  routes.rs
